<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bottomsheetdesign">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/attachment_from"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="bold"></TextView>

    <!-- CAMERA APP -->
    <LinearLayout
        android:id="@+id/cameraAttachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:src="@drawable/camera_icon"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="20sp"></TextView>
    </LinearLayout>

    <!-- GALLERY APP -->
    <LinearLayout
        android:id="@+id/galleryAttachment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="36dp"
            android:layout_height="match_parent"
            android:src="@drawable/gallery_icon"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/gallery"
            android:textColor="@color/black"
            android:textSize="20sp"></TextView>
    </LinearLayout>

</LinearLayout>